--- a/exercicios/aula22/fundo006.html
+++ b/exercicios/aula22/fundo006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doc</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body{
             height: 100vh;
@@ -12,12 +12,17 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
             
-
+            /* 
+            ShortHand - background
+            color - image - position - repeat - size() - attachment
+            */
+            
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid blue;
@@ -29,7 +34,10 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsam enim nesciunt laudantium numquam corrupti deserunt illum vel voluptatem! Eaque officiis minima ea necessitatibus mollitia numquam eligendi? Repellat, ab quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem maiores magnam et blanditiis sequi debitis, unde voluptas! Voluptas vero nisi, quis qui temporibus esse et odio rerum fugit vel officia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni minima odio beatae, voluptatem fugiat at ipsa quasi fugit, sunt officia cumque deserunt placeat vero deleniti nostrum natus omnis? Eius, aliquam!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsam enim nesciunt laudantium numquam corrupti deserunt illum vel voluptatem! Eaque officiis minima ea necessitatibus mollitia numquam eligendi? Repellat, ab quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem maiores magnam et blanditiis sequi debitis, unde voluptas! Voluptas vero nisi, quis qui temporibus esse et odio rerum fugit vel officia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni minima odio beatae, voluptatem fugiat at ipsa quasi fugit, sunt officia cumque deserunt placeat vero deleniti nostrum natus omnis? Eius, aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam alias vitae voluptas sunt reiciendis vel minima repudiandae, iusto quis! Nihil exercitationem reiciendis molestiae atque tempora ullam minus placeat accusamus soluta. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate quod magni quos, autem sit vel odio fuga assumenda quibusdam. Ipsum, veritatis! Tempora quasi consequatur modi quas corporis, facilis cupiditate cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nemo et sed molestias, quam iusto nam nostrum eveniet, possimus molestiae optio labore dolor qui atque recusandae harum, aut maxime. Est! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas placeat numquam expedita quas, facere porro reprehenderit soluta nemo magni accusantium architecto asperiores beatae eos repellendus labore voluptate quod aspernatur similique.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsam enim nesciunt laudantium numquam corrupti deserunt illum vel voluptatem! Eaque officiis minima ea necessitatibus mollitia numquam eligendi? Repellat, ab quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem maiores magnam et blanditiis sequi debitis, unde voluptas! Voluptas vero nisi, quis qui temporibus esse et odio rerum fugit vel officia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni minima odio beatae, voluptatem fugiat at ipsa quasi fugit, sunt officia cumque deserunt placeat vero deleniti nostrum natus omnis? Eius, aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam alias vitae voluptas sunt reiciendis vel minima repudiandae, iusto quis! Nihil exercitationem reiciendis molestiae atque tempora ullam minus placeat accusamus soluta. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate quod magni quos, autem sit vel odio fuga assumenda quibusdam. Ipsum, veritatis! Tempora quasi consequatur modi quas corporis, facilis cupiditate cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nemo et sed molestias, quam iusto nam nostrum eveniet, possimus molestiae optio labore dolor qui atque recusandae harum, aut maxime. Est! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas placeat numquam expedita quas, facere porro reprehenderit soluta nemo magni accusantium architecto asperiores beatae eos repellendus labore voluptate quod aspernatur similique
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsam enim nesciunt laudantium numquam corrupti deserunt illum vel voluptatem! Eaque officiis minima ea necessitatibus mollitia numquam eligendi? Repellat, ab quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem maiores magnam et blanditiis sequi debitis, unde voluptas! Voluptas vero nisi, quis qui temporibus esse et odio rerum fugit vel officia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni minima odio beatae, voluptatem fugiat at ipsa quasi fugit, sunt officia cumque deserunt placeat vero deleniti nostrum natus omnis? Eius, aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam alias vitae voluptas sunt reiciendis vel minima repudiandae, iusto quis! Nihil exercitationem reiciendis molestiae atque tempora ullam minus placeat accusamus soluta. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate quod magni quos, autem sit vel odio fuga assumenda quibusdam. Ipsum, veritatis! Tempora quasi consequatur modi quas corporis, facilis cupiditate cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nemo et sed molestias, quam iusto nam nostrum eveniet, possimus molestiae optio labore dolor qui atque recusandae harum, aut maxime. Est! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas placeat numquam expedita quas, facere porro reprehenderit soluta nemo magni accusantium architecto asperiores beatae eos repellendus labore voluptate quod aspernatur similique
+        </p>
     </main>
 </body>
 </html>
