--- a/exercicios/aula23/tabela001.html
+++ b/exercicios/aula23/tabela001.html
@@ -4,23 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        table {
+            width: 400px;
+            height: 400px;
+            border-collapse: collapse;
+        }
+        td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+            vertical-align: middle;
+        }
+        .numero {
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
     <h1>Minha Primeira Tabela</h1>
-    <table>
         <!-- 
         Hieraquia de tabelas (simples)
         table = tabela
-        table row
-            table header
-            table data
+            table row
+                table header
+                table data
         -->
-    </table>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <13></13>
-        </tr>
+        <table>
+            <tr>
+                <td>A1</td>
+                <td>B1</td>
+                <td class="numero">C1</td>
+            </tr>
+            <tr>
+                <td>A2</td>
+                <td>B2</td>
+                <td class="numero">C2</td>
+            </tr>
+            <tr>
+                <td>A3</td>
+                <td>B3</td>
+                <td>C3</td>
+            </tr>
+            <tr>
+                <td>A4</td>
+                <td>B4</td>
+                <td>C4</td>
+            </tr>
+        </table>
 </body>
 </html>
